--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://tosianosia.github.io/js-hw-08-v2",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /js-hw-08-v2/"
+    "build": "parcel build src/*.html -- --public-url=/js-hw-08-v2/"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,5 @@
     "parcel": "^2.10.3",
     "parcel-reporter-clean-dist": "^1.0.4"
   },
-  "browserslist": [
-    "> 0.5%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
